updated to be mobile first

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -9,6 +9,7 @@
 
 @import "../pages/hello-ionic/hello-ionic";
 @import "../pages/game/game";
+@import "../pages/sensors/sensors";
 ion-content {
     background: black;
 }
