--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,6 +10,8 @@
 @import "../pages/hello-ionic/hello-ionic";
 @import "../pages/game/game";
 @import "../pages/sensors/sensors";
+@import "../pages/phmeter/phmeter";
+@import "../pages/video/video";
 ion-content {
     background: black;
 }
