--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,3 +10,4 @@
 @import "../pages/sensors/sensors";
 @import "../pages/video/video";
 @import "../pages/wikipedia/wikipedia";
+@import "../pages/start/start";
