added notes page

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,4 +11,5 @@
 @import "../pages/video/video";
 @import "../pages/wikipedia/wikipedia";
 @import "../pages/start/start";
+@import "../pages/notes/notes";
 @import "../pages/map/map";
