--- a/app/pages/start/start.scss
+++ b/app/pages/start/start.scss
@@ -2,3 +2,9 @@
     background: green;
     color: white;
 }
+ion-navbar#game-nav {
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    top: initial;
+}
