--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -13,3 +13,5 @@
 @import "../pages/start/start";
 @import "../pages/notes/notes";
 @import "../pages/map/map";
+@import "../components/status/status";
+@import "../components/analysis/analysis";
