adding map component

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -12,6 +12,7 @@
 @import "../pages/wikipedia/wikipedia";
 @import "../pages/start/start";
 @import "../pages/notes/notes";
-@import "../pages/map/map";
+@import "../pages/secretmissions/secretmissions";
 @import "../components/status/status";
 @import "../components/analysis/analysis";
+@import "../components/map/map";
