--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -15,3 +15,5 @@
 @import "../pages/map/map";
 @import "../components/status/status";
 @import "../components/analysis/analysis";
+@import "../pages/backpack/backpack";
+@import "../pages/messages/messages";
