--- a/app/pages/backpack/backpack.scss
+++ b/app/pages/backpack/backpack.scss
@@ -1,42 +1,40 @@
 #backpack {
-    background: green;
-    height: 100%;
-}
-#backpack  > ion-row {
-    padding: 0;
-    margin: 0;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
+  background: url(../../img/tile.png) repeat;
+  height: 100%;
+
+  ion-row {
     justify-content: center;
+
+    ion-col > ion-icon {
+      border: 1px solid rgba(255, 255, 255, 0.8);
+      box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      background: #fff5b3;
+      padding: 5px;
+      width: 100px;
+      height: 100px;
+      margin: 5px;
+      text-align: center;
+    }
+
+  }
 }
-#backpack > ion-row > ion-col > ion-icon {
-    background-color: tomato;
-    padding: 5px;
-    width: 100px;
-    height: 100px;
-    margin: 10px;
-    line-height: 20px;
-    color: white;
-    font-weight: bold;
-    font-size: 2em;
-    text-align: center;
-}
+
 
 
 #tool-bar {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+
+  font-family: 'Handlee', cursive;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
