Apply icons to the toolbar.

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -19,3 +19,4 @@
 @import "../components/analysis/analysis";
 @import "../pages/backpack/backpack";
 @import "../pages/messages/messages";
+@import "../components/toolbar/toolbar";
