--- a/app/components/toolbar/toolbar.scss
+++ b/app/components/toolbar/toolbar.scss
@@ -1,35 +1,41 @@
 #tool-bar {
-    position: absolute;
-    bottom: 0;
-    margin: 15px 0 0 0;
-    background: darkblue;
-    height: 55px;
-    width: 100%;
-    padding: 10px;
-}
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 110px;
 
-bar > button {
-    background-color: tomato;
-    padding: 5px;
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    line-height: 20px;
-    color: white;
-    font-weight: bold;
-    font-size: 2em;
-    text-align: center;
-}
+  font-family: 'Handlee', cursive;
 
-bar {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  // display: -webkit-box;
+  // display: -moz-box;
+  // display: -ms-flexbox;
+  // display: -webkit-flex;
+  // display: flex;
+  display: block;
+  align-items: center;
+  justify-content: center;
+
+  bar { display: block; }
+
+  button {
+    padding-top: 80px;
+    height: 100px;
+    width: 23%;
+    background: url(../../img/footerSprite.png) no-repeat;
+    color: #333;
+
+    &.messages {
+      background-position: center 10px;
+    }
+    &.backpack {
+      background-position: center -100px;
+    }
+    &.notes {
+      background-position: center -215px;
+    }
+    &.help {
+      background-position: center -330px;
+    }
+  }
+
 }
