--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -20,8 +20,4 @@
 @import "../components/map/map";
 @import "../pages/backpack/backpack";
 @import "../pages/messages/messages";
-<<<<<<< HEAD
-
-=======
-@import "../components/toolbar/toolbar";
->>>>>>> f0a295313779a9aaeac0843097917f9b0a157883
+@import "../pages/clues/clues";
