added clue completion

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -17,7 +17,9 @@
 @import "../pages/secretmissions/secretmissions";
 @import "../components/status/status";
 @import "../components/analysis/analysis";
+@import "../components/hypothesis/hypothesis";
 @import "../components/map/map";
+@import "../components/toolbar/toolbar";
 @import "../pages/backpack/backpack";
 @import "../pages/messages/messages";
 @import "../pages/clues/clues";
