--- a/app/components/analysis/analysis.scss
+++ b/app/components/analysis/analysis.scss
@@ -3,4 +3,14 @@
 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 20px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#aaa;color:#fff;background-color:#f38630;}
 .tg .tg-j2zy{background-color:#FCFBE3;vertical-align:top}
 .tg .tg-yw4l{vertical-align:top}
-@media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;margin: auto 0px;}}
+@media screen and (max-width: 767px) {
+    .tg {
+            width: 100%;
+            margin: 0px;
+    }
+    .tg col {width: auto !important;}
+    .tg-wrap {
+        overflow-x: auto;-webkit-overflow-scrolling: touch;margin: auto 0px;
+        margin: 15px;
+    }
+}
