styled rest of the site

--- a/app/components/toolbar/toolbar.scss
+++ b/app/components/toolbar/toolbar.scss
@@ -1,9 +1,12 @@
+.toolbar {
+  min-height: 120px;
+}
 #tool-bar {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 110px;
-
+  min-height: 110px;
   font-family: 'Handlee', cursive;
 
   // display: -webkit-box;
