--- a/app/pages/backpack/backpack.scss
+++ b/app/pages/backpack/backpack.scss
@@ -15,7 +15,83 @@
       height: 100px;
       margin: 5px;
       text-align: center;
+
+      i {
+        display: block;
+        padding-top: 100px;
+        height: 0;
+        overflow: hidden;
+        position: relative;
+        color: #903f98;
+
+        &:before {
+          position: absolute;
+          top: 10px;
+          left: 50%;
+          margin-left: -32px;
+          font: 70px 'icomoon';
+        }
+
+        &.icon-dice:before {
+            content: "\e902";
+        }
+        &.icon-magGlass:before {
+            content: "\e903";
+        }
+        &.icon-map:before {
+            content: "\e904";
+        }
+        &.icon-phTestingKit:before {
+            content: "\e905";
+        }
+        &.icon-rock:before {
+            content: "\e906";
+        }
+        &.icon-thermometer:before {
+            content: "\e907";
+        }
+        &.icon-vial:before {
+            content: "\e908";
+        }
+        &.icon-video:before {
+            content: "\e900";
+        }
+        &.icon-wikkepedia:before {
+            content: "\e901";
+        }
+
+      }
+
     }
 
   }
+}
+
+
+// fonts
+
+@font-face {
+    font-family: 'icomoon';
+    src:    url('../fonts/icomoon.eot?uxa217');
+    src:    url('../fonts/icomoon.eot?uxa217#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?uxa217') format('truetype'),
+        url('../fonts/icomoon.woff?uxa217') format('woff'),
+        url('../fonts/icomoon.svg?uxa217#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
