--- a/app/pages/backpack/backpack.scss
+++ b/app/pages/backpack/backpack.scss
@@ -2,8 +2,15 @@
   background: url(../../img/tile.png) repeat;
   height: 100%;
 
+  h1 {
+    width: 90%;
+    margin: 10px auto 0;
+    font: 38px 'Handlee';
+  }
+
   ion-row {
     justify-content: center;
+    padding: 0;
 
     ion-col > ion-icon {
       border: 1px solid rgba(255, 255, 255, 0.8);
