Update Footer Sprite

--- a/app/components/status/status.scss
+++ b/app/components/status/status.scss
@@ -18,5 +18,10 @@
     &:last-child {
       border: 0;
     }
+
+    i {
+      background: url(../../footerSprite.png) no-repeat;
+
+    }
   }
 }
