Style in badges...

--- a/app/components/status/status.html
+++ b/app/components/status/status.html
@@ -6,7 +6,7 @@
                 000 XP
             </section>
             <section class="points">
-                <i></i>
+                <i class="coin"></i>
                 000
             </section>
         </bar>
