--- a/app/pages/messages/messages.scss
+++ b/app/pages/messages/messages.scss
@@ -46,3 +46,139 @@
     box-shadow: 2px -2px 2px 0 rgba( 178, 178, 178, .4 );
     right: -9px;    
 }
+
+            /* Bit of normalisation */
+            
+            #messages {
+                padding: 10px;
+                margin-top: 15px;
+            }
+            
+            img {
+                display: block;
+                height: auto;
+                max-width: 100%;
+            }
+            
+            .container {
+                padding: 40px 20px;
+                margin: 0 auto;
+                width: 50%;
+            }
+            /* .bubble */
+            
+            .bubble {
+                background-image: linear-gradient(bottom, rgb(210, 244, 254) 25%, rgb(149, 194, 253) 100%);
+                background-image: -o-linear-gradient(bottom, rgb(210, 244, 254) 25%, rgb(149, 194, 253) 100%);
+                background-image: -moz-linear-gradient(bottom, rgb(210, 244, 254) 25%, rgb(149, 194, 253) 100%);
+                background-image: -webkit-linear-gradient(bottom, rgb(210, 244, 254) 25%, rgb(149, 194, 253) 100%);
+                background-image: -ms-linear-gradient(bottom, rgb(210, 244, 254) 25%, rgb(149, 194, 253) 100%);
+                background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.25, rgb(210, 244, 254)), color-stop(1, rgb(149, 194, 253)));
+                border: solid 1px rgba(0, 0, 0, 0.5);
+                /* vendor rules */
+                border-radius: 20px;
+                /* vendor rules */
+                box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.4), 0 1px 3px rgba(0, 0, 0, 0.2);
+                /* vendor rules */
+                box-sizing: border-box;
+                clear: both;
+                margin-bottom: 20px;
+                padding: 8px 30px;
+                text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
+                max-width: 10 class="bubble"0%;
+                word-wrap: break-word;
+            }
+            
+            .bubble:before,
+            .bubble:after {
+                border-radius: 20px / 10px;
+                content: '';
+                display: block;
+                position: absolute;
+            }
+            
+            .bubble:before {
+                border: 10px solid transparent;
+                border-bottom-color: rgba(0, 0, 0, 0.5);
+                bottom: 0;
+                left: -7px;
+                z-index: -2;
+            }
+            /*   .bubble:after {
+            border: 8px solid transparent;
+            border-bottom-color: #d2f4fe;
+            bottom: 1px;
+            left: -5px;
+        }*/
+            
+            .bubblealt {
+                background-image: linear-gradient(bottom, rgb(172, 228, 75) 25%, rgb(122, 205, 71) 100%);
+                background-image: -o-linear-gradient(bottom, rgb(172, 228, 75) 25%, rgb(122, 205, 71) 100%);
+                background-image: -moz-linear-gradient(bottom, rgb(172, 228, 75) 25%, rgb(122, 205, 71) 100%);
+                background-image: -webkit-linear-gradient(bottom, rgb(172, 228, 75) 25%, rgb(122, 205, 71) 100%);
+                background-image: -ms-linear-gradient(bottom, rgb(172, 228, 75) 25%, rgb(122, 205, 71) 100%);
+                background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.25, rgb(172, 228, 75)), color-stop(1, rgb(122, 205, 71)));
+                border: solid 1px rgba(0, 0, 0, 0.5);
+                /* vendor rules */
+                border-radius: 20px;
+                /* vendor rules */
+                box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.4), 0 1px 3px rgba(0, 0, 0, 0.2);
+                /* vendor rules */
+                box-sizing: border-box;
+                clear: both;
+                margin-bottom: 20px;
+                padding: 8px 30px;
+                text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
+                max-width: 10 class="bubble"0%;
+                word-wrap: break-word;
+            }
+            
+            .bubblealt:before {
+                border-bottom-color: rgba(0, 0, 0, 0.5);
+                border-radius: 20px / 10px;
+                left: auto;
+                right: -7px;
+            }
+            
+            .bubblealt:after {
+                border-bottom-color: #ace44b;
+                border-radius: 20px / 10px;
+                left: auto;
+                right: -5px;
+            }
+            
+            .chatrowl {
+                position: relative;
+                display: inline-flex;
+                width: 100%;
+                background: none;
+            }
+            
+            .usericonl {
+                display: inline-block;
+                margin: 5px;
+                min-width: 48px;
+            }
+            
+            .bubblerl {
+                display: inline-block;
+                width: 200px;
+            }
+            
+            .chatrow {
+                width: 100%;
+                display: inline-block;
+            }
+            
+            .usericon-r {
+                display: inline-block;
+                margin: 10px;
+                width: 48px;
+                float: right;
+            }
+            
+            .bubbler {
+                display: inline-block;
+                width: 200px;
+                float: right;
+            }
