--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -23,6 +23,7 @@
 @import "../pages/backpack/backpack";
 @import "../pages/messages/messages";
 @import "../pages/clues/clues";
+@import "../pages/cluemap/cluemap";
 
 ion-page {
     background: url(../../img/tile.png) repeat;
