--- a/app/pages/start/start.scss
+++ b/app/pages/start/start.scss
@@ -3,7 +3,11 @@
   color: white;
 
   header {
-    margin: 10px;
+    background: url(../../img/aosHeader.png) no-repeat #3664ab center 0;
+    padding-top: 57px;
+    height: 0;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   }
 
   #status-bar {
@@ -15,13 +19,6 @@ ion-navbar#game-nav {
   bottom: 0;
   height: 50px;
   top: initial;
-}
-#game-title {
-  font-size: 7.5vw;
-  margin: auto;
-  text-align: center;
-  padding: 10px;
-  background: darkblue;
 }
 ion-avatar img {
   max-width: 8.6rem;
