--- a/app/components/gamebar/backpack.scss
+++ b/app/components/gamebar/backpack.scss
@@ -25,18 +25,18 @@
 
       i {
         display: block;
-        padding-top: 100px;
-        height: 0;
-        overflow: hidden;
+        padding-top: 55px;
+        height: 50px;
         position: relative;
         color: #903f98;
+        font: 14px 'Handlee', cursive;
 
         &:before {
           position: absolute;
           top: 10px;
           left: 50%;
-          margin-left: -32px;
-          font: 70px 'icomoon';
+          margin-left: -20px;
+          font: 42px 'icomoon';
         }
 
         &.icon-dice:before {
@@ -87,10 +87,10 @@
     font-weight: normal;
     font-style: normal;
 }
-    
+
 [class^="icon-"], [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
+    font-family: 'icomoon';
     speak: none;
     font-style: normal;
     font-weight: normal;
