--- a/app/components/map/map.scss
+++ b/app/components/map/map.scss
@@ -19,3 +19,9 @@
   stroke-linecap: round;
   pointer-events: none;
 }
+#map-title {    font-family: handlee;
+    font-size: 2.25em;
+    font-weight: bold;
+    fill: black;
+    color: black;
+}
